tunneling-outbound-traffic-kind/samples/https-proxy/destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: tunnel-outbound-traffic-to-external-app-via-external-forward-proxy
spec:
  host: external-forward-proxy.external.svc.cluster.local
  subsets:
  - name: external-app-8080
    trafficPolicy:
      tunnel:
        targetHost: external-app.external.svc.cluster.local
        targetPort: 8080
  - name: external-app-443
    trafficPolicy:
      tunnel:
        targetHost: external-app.external.svc.cluster.local
        targetPort: 443
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-outbound-traffic-to-external-forward-proxy
spec:
  host: external-forward-proxy.external.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
      sni: external-forward-proxy.external.svc.cluster.local
